feat: introduced playback dto to reduce time calling when album is requested