@@ -2,12 +2,18 @@ package com.asomusic.backend.service.song;
 
 import com.asomusic.backend.model.dto.AlbumDTO;
 import com.asomusic.backend.model.dto.SongDTO;
+import com.asomusic.backend.model.dto.SongPlaybackUrlDTO;
+import com.asomusic.backend.model.dto.SongPreviewDTO;
 import com.asomusic.backend.repository.song.ISongRepository;
 import com.asomusic.backend.service.storage.FirebaseStorageService;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
 
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
@@ -19,6 +25,12 @@ public class SongService implements ISongService {
 
     @Inject
     FirebaseStorageService firebaseStorageService;
+
+    @ConfigProperty(
+            name = "firebase.storage.url-expiration-hours",
+            defaultValue = "24"
+    )
+    long urlExpirationHours;
 
     @Override
     public List<AlbumDTO> fetchAllSongs() {
@@ -44,14 +56,82 @@ public class SongService implements ISongService {
     }
 
     @Override
-    public List<SongDTO> fetchSongsByAlbum(String albumId) {
+    public List<SongPreviewDTO> fetchSongsByAlbum(String albumId) {
         try {
             return songRepository.fetchSongsByAlbum(albumId)
                     .stream()
-                    .map(song -> convertSongStorageUrlsSafe(song, albumId, null)) // 👈 nuovo overload
-                    .collect(Collectors.toList());
-        } catch (ExecutionException | InterruptedException e) {
-            throw new RuntimeException("❌ Errore durante il recupero delle canzoni dell'album", e);
+                    .map(this::convertToSongPreview)
+                    .toList();
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+
+            throw new RuntimeException(
+                    "Thread interrotto durante il recupero delle canzoni dell'album",
+                    e
+            );
+
+        } catch (ExecutionException e) {
+            throw new RuntimeException(
+                    "Errore durante il recupero delle canzoni dell'album",
+                    e
+            );
+        }
+    }
+
+    @Override
+    public SongPlaybackUrlDTO generatePlaybackUrl(
+            String albumId,
+            String songId
+    ) {
+        try {
+            String audioStoragePath = songRepository
+                    .fetchSongAudioStoragePath(albumId, songId)
+                    .orElseThrow(() -> new NoSuchElementException(
+                            "Song not found or missing audio URL: " + songId
+                    ));
+
+            OffsetDateTime expiresAt = OffsetDateTime
+                    .now(ZoneOffset.UTC)
+                    .plusHours(urlExpirationHours);
+
+            String signedUrl =
+                    firebaseStorageService.generateSignedUrl(
+                            audioStoragePath
+                    );
+
+            /*
+             * FirebaseStorageService attualmente restituisce il gsPath
+             * originale quando la firma fallisce. Evitiamo quindi di
+             * restituire una risposta 200 con una URL inutilizzabile.
+             */
+            if (signedUrl == null
+                    || signedUrl.isBlank()
+                    || signedUrl.startsWith("gs://")) {
+                throw new IllegalStateException(
+                        "Unable to generate playback URL for song: "
+                                + songId
+                );
+            }
+
+            return SongPlaybackUrlDTO.builder()
+                    .url(signedUrl)
+                    .expiresAt(expiresAt)
+                    .build();
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+
+            throw new RuntimeException(
+                    "Thread interrupted while generating playback URL",
+                    e
+            );
+
+        } catch (ExecutionException e) {
+            throw new RuntimeException(
+                    "Error retrieving song playback information",
+                    e
+            );
         }
     }
 
@@ -88,6 +168,24 @@ public class SongService implements ISongService {
                 .artists(song.getArtists())
                 .albumId(albumId)
                 .albumName(albumName)
+                .build();
+    }
+
+    private SongPreviewDTO convertToSongPreview(SongDTO song) {
+        return SongPreviewDTO.builder()
+                .id(song.getId())
+                .title(song.getTitle())
+                .duration(song.getDuration())
+                .coverURL(
+                        firebaseStorageService.generateSignedUrl(
+                                song.getCoverURL()
+                        )
+                )
+                .stream(song.getStream())
+                .tracklistPosition(song.getTracklistPosition())
+                .artists(song.getArtists())
+                .albumId(song.getAlbumId())
+                .albumName(song.getAlbumName())
                 .build();
     }
 }
